--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Jaram Omok Competition",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev:server": "nodemon -L"
   },
   "license": "MIT",
-  "type": "module",
+  
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
@@ -16,5 +17,17 @@
     "sequelize": "^6.13.0",
     "socket.io": "^4.4.1",
     "winston": "^3.4.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/node": "^7.14.9",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "mini-css-extract-plugin": "^2.3.0",
+    "nodemon": "^2.0.12",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0"
   }
 }
