--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "Jaram_Omok_Competition",
+  "name": "Jaram_Othello_Competition",
   "version": "1.0.0",
-  "description": "Jaram Omok Competition",
+  "description": "Jaram_Othello_Competition",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "pm2:single": "pm2 start index.js",
-    "pm2:cluster": "pm2 start ecosystem.config.js",
-    "dev:server": "nodemon -L"
+    "pm2:cluster": "pm2 start ecosystem.config.js"
   },
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1",
     "pm2": "^5.1.2",
-    "sequelize": "^6.13.0",
     "socket.io": "^4.4.1",
     "winston": "^3.4.0"
-  },
-  "devDependencies": {
-    "css-loader": "^6.3.0",
-    "mini-css-extract-plugin": "^2.3.0",
-    "nodemon": "^2.0.12",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.3.0"
   }
 }
